Fixed side panel spacing

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -69,14 +69,6 @@ label {
   font-weight: 600;
 }
 
-.column-main {
-  max-width: 70%
-}
-
-.column-side {
-  max-width: 20%
-}
-
 .content {
   width: 70%
 }
